# PhD-Thesis

./: README.md
Chapter4/SPEO_CPU/: README.md
Chapter4/SPEO_CPU/EA_library/EA_CUDA/: CEC2014_CUDA.cc  DE_CUDA.cc  EA_CUDA.cc  kernel_DE_CUDA.cu  kernel_EA_CUDA.cu
Chapter4/SPEO_CPU/include/: CEC2014_CUDA.h  comm.h  config.h  migrate.h  record.h
Chapter4/SPEO_CPU/src/: communicator.cc  island_EA.cc  main.cc  migrate.cc
Chapter4/SPEO_with_makefile/: CMakeCache.txt  CMakeLists.txt  Makefile  OzStar_script.sh
Chapter4/SPEO_with_makefile/include/: CEC2014.h  EA_CPU.h  buffer_manage.h  comm.h  communicator.h  config.h  island_EA.h  migrate.h  random.h  record.h
Chapter4/SPEO_with_makefile/src/: CEC2014.cc  DE_CPU.cc  EA_CPU.cc  buffer_manage.cc  comm.cc  communicator.cc  island_EA.cc  main.cc  migrate.cc  random.cc  record.cc
Chapter5/SPEO_LES_CDE/: README.md
Chapter5/SPEO_LES_CDE/EA_library/EA_CPU/: DE_CPU.cc  EA_CPU.cc
Chapter5/SPEO_LES_CDE/include/: EA_CPU.h  buffer_manage.h  comm.h  communicator.h  config.h  elm.h  island_EA.h  migrate.h  random.h  record.h
Chapter5/SPEO_LES_CDE/src/: buffer_manage.cc  comm.cc  communicator.cc  elm.cc  island_EA.cc  main.cc  migrate.cc  random.cc  record.cc
Chapter6/CPU_MBSO/: README.md
Chapter6/CUDA_MBSO/: README.md
Chapter6/MBSO/CPU_MBSO/: CPU_MBSO.sln  README.md
Chapter6/MBSO/CUDA_MBSO/: CUDA_MBSO.sln  README.md
Chapter7/SPEO_GPU/: README.md
Chapter7/SPEO_GPU/include/: CEC2014.h  EA_CPU.h  EA_CUDA.h  buffer_manage.h  config.h  island_EA.h
Chapter7/SPEO_GPU/src/: buffer_manage.cc  comm.cc  record.cc
(+133 files in other folders)
